initial implementation of unchanged predicate